--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="author" content="ThemeStarz">
+    <meta name="title" content="Nkechi Ofili financial coach">
+    <meta name="description" content="Make a wise financial decision with Ofili Nkechi as she gives insight on the market trends and best policy for optimal financial success.">
+    <meta name="keywords" content="Investment, Economics, Nigeria, Money, Naira, Business, Entrepreneur">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1 days">
+    <meta name="author" content="Udeogu Ifechukwu">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,600,700">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" type="text/css">
@@ -11,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-	<title>LifeCoach - One Page Coach & Mentor Template</title>
+	<title>Nkechi Ofili - Financial Coach</title>
 
 </head>
 <body data-spy="scroll" data-target=".navbar" class="has-loading-screen">
@@ -484,7 +490,7 @@
                     </div>
                     <!--end ts-box-->
                     <div class="text-center text-white py-4">
-                        <small>© 2020 Ofili Nkechi, All Rights Reserved</small> Designed with <i class="heart"></i> OnceNout.
+                        <small>© 2020 Ofili Nkechi, All Rights Reserved</small> Designed with<i class="fas fa-heart"></i> OnceNout.
                     </div>
                 </div>
                 <!--end container-->
