--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="1 days">
     <meta name="author" content="Udeogu Ifechukwu">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,600,700">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" type="text/css">
