--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <!--************ HERO ***************************************************************************************-->
         <!--*********************************************************************************************************-->
         <header id="ts-hero" class="ts-full-screen ts-separate-bg-element">
+            <img src="assets/img/about_nkechi_ofili.png" alt="Nkechi Ofili" style="display: none;" />
             <!--NAVIGATION ******************************************************************************************-->
             <nav class="navbar navbar-expand-lg navbar-light fixed-top ts-separate-bg-element" >
                 <div class="container">
