added contact form link

--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                                     </div>
                                 </div>
                                 <div class="text-center text-sm-left">
-                                    <a href="index.html#" class="btn btn-primary mr-3 my-2">Contact Me</a>
-                                    <a href="index.html#" class="btn btn-outline-dark ts-btn-border-muted my-2">Get an Appointment</a>
+                                    <a href="index.html#form-contact" class="btn btn-primary mr-3 my-2">Contact Me</a>
+                                    <a href="index.html#form-contact" class="btn btn-outline-dark ts-btn-border-muted my-2">Get an Appointment</a>
                                 </div>
                             </div>
                         </div>
