fixed typo and color error

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="container align-self-center align-items-center">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 data-animate="ts-fadeInUp">Looking for A Finacial Coach?<br> You found me!</h1>
+                        <h1 data-animate="ts-fadeInUp">Looking for A <font style="color: #578990;">Financial</font> Coach?<br> You found me!</h1>
                         <div data-animate="ts-fadeInUp" data-delay=".1s">
                             <p class="w-75 mb-5 ts-opacity__50">I'm going to help you create the wealth you want, and the life you deserve.</p>
                         </div>
@@ -402,7 +402,7 @@
             <section id="buy-now" class="ts-block text-center py-5">
                 <div class="container">
                     <div class="ts-title mb-3">
-                        <h2 class="mb-0">Book for a Finacial Coach now!</h2>
+                        <h2 class="mb-0">Book for a <font style="color: #568890;"> Financial</font> Coach now!</h2>
                     </div>
                     <!--end ts-title-->
                     <a href="index.html#" class="btn btn-primary">Book Now!</a>
