--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             <!--HERO BACKGROUND *************************************************************************************-->
             <div class="ts-background" data-bg-color="#faf9f6" data-bg-parallax="scroll" data-bg-parallax-speed="3">
-                <div class="ts-background-image ts-parallax-element ts-z-index__1" data-bg-image="assets/img/nkechi_ofili.png" data-animate="ts-fadeInUp"></div>
+                <div class="ts-background-image ts-parallax-element ts-z-index__1" data-bg-image="assets/img/bg-woman.png" data-animate="ts-fadeInUp"></div>
                 <div class="ts-background-image ts-parallax-element position-absolute ts-top__0 ts-left__0 ts-z-index__0" data-bg-image="assets/img/bg-shape-top-left.png" data-animate="ts-fadeInLeft" data-delay=".1s"></div>
                 <div class="ts-background-image ts-parallax-element position-absolute ts-top__0 ts-left__0 ts-z-index__-1" data-bg-image="assets/img/bg-shape-bottom-right.png" data-animate="ts-fadeInRight" data-delay=".2s"></div>
 
@@ -231,7 +231,7 @@
                         <!--end col-md-6-->
                         <div class="col-sm-6">
                             <div class="d-flex h-100 align-items-end">
-                                <img src="assets/img/about_nkechi_ofili.png" alt="" class="w-100">
+                                <img src="assets/img/img-woman-pointing.png" alt="" class="w-100">
                             </div>
                         </div>
                     </div>
